# coryking-plugins

./: .gitignore  CLAUDE.md  INSTALLATION.md  README.md  pyrightconfig.json
project-mining/: .mcp.json  pyproject.toml
project-mining/.claude-plugin/: plugin.json
project-mining/agents/: activity-analyst.md  codebase-analyst.md  mining-researcher.md  output-analyst.md  process-analyst.md  project-scout.md
project-mining/scripts/: cursor_daily_stats.py  cursor_mine_prompts.py  cursor_model_usage.py  cursor_pull_conversation.py  cursor_search_prompts.py  cursor_triage_headers.py
project-mining/skills/activity-reflection/: SKILL.md
project-mining/skills/cc-explorer/: SKILL.md
project-mining/skills/project-mining/: SKILL.md
project-mining/src/cc_explorer/: __init__.py  _claude_paths.py  activity.py  conversion.py  formatting.py  mcp_server.py  models.py  parser.py  responses.py  search.py  subagents.py  utils.py
project-mining/tests/: conftest.py  test_activity_timeline.py  test_agent_tool_audit.py  test_audit_fixes.py  test_conversion.py  test_crossproject_resolution.py  test_current_session.py  test_discover_projects.py  test_discover_subagents.py  test_empty_sessions.py  test_entry_display.py  test_format_tool_input.py  test_match_example.py  test_prefix_id.py  test_prefix_id_contracts.py  test_search_outputs_and_centering.py  test_search_project_output.py  test_smart_truncate.py  test_subagent_corpus.py  test_teammate_sessions.py  test_transcript_cache.py  test_triage_multi.py  test_triage_tool_scope.py  test_turn_validation.py  test_worktree_unification.py
(+71 files in other folders)
