[project]
name = "cc-explorer"
version = "1.5.0"
description = "MCP server for exploring Claude Code chat history — search conversations, quote moments, inspect subagents."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.12", "fastmcp>=1.3", "claude-agent-sdk>=0.1.48"]

[project.scripts]
cc-explorer = "cc_explorer.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
